sample-app/service.yml
apiVersion: v1
kind: Service
metadata:
  name: test-dast-golang-gin-svc
  namespace: web-team-dev
spec:
  selector:
    app: test-dast-golang-gin
  ports:
  - port: 80
    protocol: TCP
    targetPort: 8080
