sample-app/route.yml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  name: test-dast-golang-gin
  namespace: web-team-dev
spec:
  port:
    targetPort: 8080
  to:
    kind: Service
    name: test-dast-golang-gin-svc
  tls:
    termination: edge
    insecureEdgeTerminationPolicy: Redirect
  wildcardPolicy: None
